--- a/src/Containers/Home/Home.scss
+++ b/src/Containers/Home/Home.scss
@@ -1,1 +1,17 @@
+.container {
+  height: 100vh;
+  width: 100vw;
+  background-color: black;
+}
 
+h1 {
+  -webkit-background-clip: text;
+  background-clip: text;
+  background-image: url("../../assets/img/back.jpg");
+  background-repeat: repeat-x;
+  background-size: contain;
+  color: transparent;
+}
+span {
+  color: var(--pink);
+}
