--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,14 @@
 body {
-  font-family: "Game Of Squids";
+  font-family: "Orbitron", sans-serif;
+  // font-family: "Game Of Squids";
 }
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Lato", sans-serif;
+}
+
+.pink {
+  color: var(--pink);
 }
