--- a/src/Containers/Home/Home.scss
+++ b/src/Containers/Home/Home.scss
@@ -1,14 +1,20 @@
-.container {
-  width: 100vw;
-  background-color: black;
-}
-
-h1 {
-  -webkit-background-clip: text;
-  background-clip: text;
-  background-image: url("../../assets/img/back.jpg");
-  background-repeat: repeat-x;
-  background-size: contain;
-  color: transparent;
-  opacity: 0;
+.home {
+  header {
+    position: relative;
+  }
+  img {
+    height: 100vh;
+    max-width: 100vw;
+    object-fit: cover;
+    object-position: center;
+    filter: opacity(0.4);
+  }
+  h1 {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    font-size: 5vmin;
+  }
 }
