--- a/src/Containers/Home/Home.scss
+++ b/src/Containers/Home/Home.scss
@@ -9,12 +9,16 @@
     object-position: center;
     filter: opacity(0.4);
   }
-  h1 {
+  .center {
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
     z-index: 2;
     font-size: 5vmin;
+  }
+  p {
+    font-size: 3vmin;
+    margin-top: 50px;
   }
 }
